# docs/swagger.json
@@ -4,7 +4,42 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/users": {
+        "/v1/auth/login": {
+            "post": {
+                "description": "Login account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login account",
+                "operationId": "auth-login",
+                "parameters": [
+                    {
+                        "description": "JSON Request Body",
+                        "name": "RequestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users": {
             "get": {
                 "description": "Get list of users",
                 "consumes": [
@@ -49,13 +84,21 @@
         }
     },
     "definitions": {
+        "controllers.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
                 "address": {
-                    "type": "string"
-                },
-                "created_at": {
                     "type": "string"
                 },
                 "email": {
